# commitguard-webui

./: .gitignore  CHANGELOG.md  LICENSE  MISSING_FEATURES.md  PUBLISHING.md  README.md  app.py  config_store.py  diff_redactor.py  pyproject.toml  requirements.txt
commitguard/: __init__.py  analyzer.py  cli.py  github_analyzer.py
static/: app.js  style.css
templates/: index.html
webui/: README.md  package-lock.json  package.json
webui/src/app/: globals.css  home-client.tsx  layout.tsx  page.tsx
webui/src/app/api/: lib.ts
webui/src/app/api/analyze/: route.ts
webui/src/app/api/analyze-range/: route.ts
webui/src/app/api/check/: route.ts
webui/src/app/api/commits/: route.ts
webui/src/app/api/github/analyze-pr/: route.ts
webui/src/app/api/github/prs/: route.ts
webui/src/app/api/models/: route.ts
webui/src/app/api/settings/github-token/: route.ts
webui/src/app/api/settings/key/: route.ts
webui/src/components/: confirm-dialog.tsx  history-manager.tsx
webui/src/lib/: analyzer.ts  api.ts  config-store.ts  diff-redactor.ts  github-analyzer.ts  history-storage.ts
